TidyTuesday Exercise Update

--- a/tidytuesday_exercise.qmd
+++ b/tidytuesday_exercise.qmd
@@ -8,6 +8,7 @@ output:
 **LOADING REQUIRED PACKAGES**
 
 ```{r}
+#| warning: false
 # Loading required packages
 library(readr)
 library(tidyverse)
@@ -98,7 +99,6 @@ agediff_gender %>% ggplot(aes(x = younger_gender, y = age_difference,
   ggtitle("Age Difference as per Younger Character's Gender") + 
   labs(x="Younger Character Gender", y="Age Difference (In Years)") 
 ```
-
 **TEST STATISTIC**
 
 ```{r}
