Flu data analysis project

--- a/fluanalysis/code/Exploration.qmd
+++ b/fluanalysis/code/Exploration.qmd
@@ -1,10 +1,8 @@
 ---
-title: "Exploration"
+title: "Exploration of Flu Data"
 format: html
 editor: visual
 ---
-
-## EXPLORING FLU ANALYSIS DATA
 
 **LOADING REQUIRED PACKAGES**
 
