TidyTuesday Exercise 2 Addition

--- a/tidytuesday_exercise2.qmd
+++ b/tidytuesday_exercise2.qmd
@@ -1,8 +1,127 @@
 ---
-title: "Tidy Tuesday Exercise"
+title: "Tidy Tuesday Exercise 2"
 output: 
   html_document:
     toc: FALSE
 ---
 
-**TO BE COMPLETED**
+**LOADING REQUIRED PACKAGES**
+
+```{r}
+#| warning: false
+# Loading required packages
+library(readr)
+library(tidyverse)
+library(dplyr)
+library(naniar)
+library(skimr)
+library(ggplot2)
+library(tidymodels)
+library(ranger)
+library(glmnet)
+library(rpart.plot)
+library(vip)
+```
+
+**LOADING AND LOOKING TIDYTUESDAY 2023 WEEK 15 (04/11/2023) DATA**
+
+```{r}
+# Loading the TidyTuesday 2023 week 15 (04/11/2023) data
+egg_production <- read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-04-11/egg-production.csv')
+glimpse(egg_production)
+skim(egg_production)
+
+cage_free_percentages <- read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-04-11/cage-free-percentages.csv')
+glimpse(cage_free_percentages)
+skim(cage_free_percentages)
+```
+
+**DATA EXPLORATION AND VISUALIZATION**
+
+```{r}
+# Lets look at the trend of the number of eggs produced by hatching and table eggs production types in different years
+egg_date_prodtype_plot <- ggplot(egg_production, aes(x = observed_month, y = log(n_eggs), color = prod_type)) +
+  geom_point() +
+  theme_classic() +
+  labs(x = "Date", y = "Number of eggs", title = "Eggs production using different production types in different years") +
+  theme(axis.text = element_text(face = "bold"), plot.title = element_text(hjust = 0.5, size = 14),
+        axis.title = element_text(size = 14))
+egg_date_prodtype_plot
+
+# Lets look at the trend of the number of eggs produced by different production process in different years
+egg_date_prodprocess_plot <- ggplot(egg_production, aes(x = observed_month, y = log(n_eggs))) +
+  geom_point(aes(color = prod_process)) +
+  theme_classic() +
+  labs(x = "Date", y = "Number of eggs", title = "Eggs production using different production process in different years") +
+  theme(axis.text = element_text(face = "bold"), plot.title = element_text(hjust = 0.5, size = 14),
+        axis.title = element_text(size = 14))
+egg_date_prodprocess_plot
+
+# Lets look at the trend of the number of hens produced by hatching and table eggs production types in different years
+hens_date_prodtype_plot <- ggplot(egg_production, aes(x = observed_month, y = log(n_hens))) +
+  geom_point(aes(color = prod_type))+
+  theme_classic()+
+  labs(x = "Date", y = "Number of hens", title = "Hens production using different production types in different years") +
+  theme(axis.text = element_text(face = "bold"), plot.title = element_text(hjust = 0.5, size = 14),
+        axis.title = element_text(size = 14))
+hens_date_prodtype_plot
+
+# Lets look at the trend of the number of hens produced by different production process in different years
+hens_date_prodprocess_plot <- ggplot(egg_production, aes(x = observed_month, y = log(n_hens))) +
+  geom_point(aes(color = prod_process))+
+  theme_classic()+
+  labs(x = "Date", y = "Number of hens", title = "Hens production using different production process in different years") +
+  theme(axis.text = element_text(face = "bold"), plot.title = element_text(hjust = 0.5, size = 14),
+        axis.title = element_text(size = 14))
+hens_date_prodprocess_plot
+```
+
+```{r}
+# Lets look at the trend of the percent of cage free eggs produced in different years
+cagefreeeggs_date_plot <- ggplot(cage_free_percentages, aes(x = observed_month, y = percent_eggs)) +
+  geom_point(color = "red") +
+    geom_line(color = "red") +
+  theme_classic() +
+  labs(x = "Date", y = "Percent of cage free eggs", title = "Percent of cage free eggs in different years") +
+  theme(axis.text = element_text(face = "bold"), plot.title = element_text(hjust = 0.5, size = 14),
+        axis.title = element_text(size = 14))
+cagefreeeggs_date_plot
+
+# Lets look at the trend of the percent of cage free hens produced in different years
+cagefreehens_date_plot <- ggplot(cage_free_percentages, aes(x = observed_month, y = percent_hens)) +
+  geom_point(color = "red") +
+  geom_line(color = "red") +
+  theme_classic() +
+  labs(x = "Date", y = "Percent of cage free hens", title = "Percent of cage free hens in different years") +
+  theme(axis.text = element_text(face = "bold"), plot.title = element_text(hjust = 0.5, size = 14),
+        axis.title = element_text(size = 14))
+cagefreehens_date_plot
+```
+
+**DATA WRANGLING AND VISUALIZATION**
+
+```{r}
+# Let's look at the average number of eggs produced per hen so lets create an object named eggs_per_hen
+egg_production <- egg_production %>% mutate(eggs_per_hen = n_eggs/n_hens)
+summary(egg_production$eggs_per_hen)
+```
+
+```{r}
+# Let's plot average number of eggs produced per hens across different production process and types
+eggs_per_hen_plot <- ggplot(egg_production, aes(x = prod_type, y = eggs_per_hen)) +
+  geom_boxplot(aes(color = prod_process)) +
+  theme_classic() +
+  labs(x = "Production type", y = "Eggs per hen", title = "Eggs per hen across different production types and processes") +
+  theme(axis.text = element_text(face = "bold"), plot.title = element_text(hjust = 0.5, size = 14),
+        axis.title = element_text(size = 14))
+eggs_per_hen_plot
+
+# Let's plot trend of average number of eggs produced per hens in terms of production type
+eggs_per_hen_time_plot <- ggplot(egg_production, aes(x = observed_month, y = eggs_per_hen)) +
+  geom_line(aes(color = prod_type)) +
+  theme_classic() +
+  labs(x = "Date", y = "Eggs per hen", title = "Eggs per hen over time in terms of production type") +
+  theme(axis.text = element_text(face = "bold"), plot.title = element_text(hjust = 0.5, size = 14),
+        axis.title = element_text(size = 14))
+eggs_per_hen_time_plot
+```
